# atrosa

./: .gitignore  DOCS.md  README.md  active_rules.json  audit.py  code_validator.py  detect.py  hunt.md  hunt_catalog.py  ingest.py  orchestrator.py  providers.py  pyproject.toml  requirements.txt  schema_normalizer.py  scoring.py  sentinel.py  telemetry_engineer.py  tenant.py
connectors/: __init__.py  airweave_adapter.py  auto_discover.py  base.py  csv_import.py  stripe.py
node/: package-lock.json  package.json  tsconfig.json
node/src/: cli.ts
node/src/commands/: hunt.ts  init.ts  sentinel.ts  telemetry.ts
node/src/engine/: ingest.ts  mitigation.ts  rule-engine.ts  scoring.ts
node/src/mock/: generator.ts
node/src/providers/: anthropic.ts  base.ts  gemini.ts  index.ts  openai-compat.ts
node/src/telemetry/: delivery.ts  gap-analyzer.ts  requests.ts
node/src/utils/: code-extract.ts  jsonl.ts  paths.ts
src/atrosa/: __main__.py  cli.py  ingest.py  mock_telemetry.py  orchestrator.py  providers.py  sentinel.py  telemetry_engineer.py
testrun/: README.md  download.sh  hunt_generic.md  run.sh  transform.py
testrun/results/: ieee_cis_summary.md  paysim_summary.md  sparkov_summary.md
testrun/scripts/: transform_paysim.py  transform_saml_d.py
