[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atrosa"
version = "0.1.0"
description = "Autonomous Threat Response & Overwatch Swarm Agents"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "anthropic>=0.80",
    "openai>=1.0",
    "google-genai>=1.0",
]

[project.scripts]
atrosa = "atrosa.cli:main"
